// notes: https://hackmd.io/@moul/BkWL_pmS8

syntax = "proto3";

package yolo;

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

option go_package = "berty.tech/yolo/pkg/yolopb";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

service YoloService {
  rpc Ping(Ping.Request)                 returns (Ping.Response)         { option (google.api.http) = {get: "/ping"}; };
  rpc Status(Status.Request)             returns (Status.Response)       { option (google.api.http) = {get: "/status"}; };
  rpc BuildList(BuildList.Request)       returns (BuildList.Response)    { option (google.api.http) = {get: "/build-list"}; }
}

//
// RPC Requests & Responses
//

message Ping {
  message Request  {}
  message Response {}
}

message Status {
  message Request  {}
  message Response {
    int32 uptime = 1;
    string db_err = 2;
    int64 db_nodes = 3;
    int64 db_quads = 4;
  }
}

message BuildList {
  message Request {
    Artifact.Kind artifact_kind = 1;
  }
  message Response {
    repeated Build builds = 1;
  }
}

//
// DB Schemas
//

message Build {
  /// fields

  string id = 1 [(gogoproto.casttype) = "github.com/cayleygraph/quad.IRI", (gogoproto.moretags) = "quad:\"@id\"", (gogoproto.customname) = "ID"]; // canonical URI
  google.protobuf.Timestamp created_at = 2 [(gogoproto.moretags) = "quad:\"schema:createdAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.moretags) = "quad:\"schema:updatedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  State state = 4 [(gogoproto.moretags) = "quad:\"schema:state,optional\""];
  google.protobuf.Timestamp completed_at = 5 [(gogoproto.moretags) = "quad:\"schema:completedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  string message = 6 [(gogoproto.moretags) = "quad:\"schema:message,optional\""];
  google.protobuf.Timestamp started_at = 7 [(gogoproto.moretags) = "quad:\"schema:startedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp finished_at = 8 [(gogoproto.moretags) = "quad:\"schema:finishedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  string commit = 9 [(gogoproto.moretags) = "quad:\"schema:commit,optional\""];
  string branch = 10 [(gogoproto.moretags) = "quad:\"schema:branch,optional\""];
  Driver driver = 11 [(gogoproto.moretags) = "quad:\"schema:driver,optional\""];

  /// relationships

  repeated Artifact has_artifacts = 101 [(gogoproto.moretags) = "quad:\"schema:hasBuild < *,optional\""];
  Commit has_commit = 102 [(gogoproto.moretags) = "quad:\"schema:hasCommit,optional\""];
  Project has_project = 103 [(gogoproto.moretags) = "quad:\"schema:hasProject,optional\""];
  MergeRequest has_mergerequest = 104 [(gogoproto.moretags) = "quad:\"schema:hasMergeRequest,optional\""];

  /// enums

  enum State {
    UnknownState = 0;
    Running = 1;
    Failed = 2;
    Passed = 3;
    Canceled = 4;
    Scheduled = 5;
    Skipped = 6;
    NotRun = 7;
    Timedout = 8;
  }
}

message Release {
  /// fields

  string id = 1 [(gogoproto.casttype) = "github.com/cayleygraph/quad.IRI", (gogoproto.moretags) = "quad:\"@id\"", (gogoproto.customname) = "ID"]; // canonical URI
  google.protobuf.Timestamp created_at = 2 [(gogoproto.moretags) = "quad:\"schema:createdAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.moretags) = "quad:\"schema:updatedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  string message = 4 [(gogoproto.moretags) = "quad:\"schema:message,optional\""];
  string commit = 5 [(gogoproto.moretags) = "quad:\"schema:commit,optional\""];
  Driver driver = 6 [(gogoproto.moretags) = "quad:\"schema:driver,optional\""];

  /// relationships

  repeated Artifact has_artifacts = 101 [(gogoproto.moretags) = "quad:\"schema:hasRelease < *,optional\""];
  Commit has_commit = 102 [(gogoproto.moretags) = "quad:\"schema:hasCommit,optional\""];
  Project has_project = 103 [(gogoproto.moretags) = "quad:\"schema:hasProject,optional\""];
  MergeRequest has_mergerequest = 104 [(gogoproto.moretags) = "quad:\"schema:hasMergeRequest,optional\""];
}

message Commit {
  /// fields

  string id = 1 [(gogoproto.casttype) = "github.com/cayleygraph/quad.IRI", (gogoproto.moretags) = "quad:\"@id\"", (gogoproto.customname) = "ID"]; // canonical URI
  google.protobuf.Timestamp created_at = 2 [(gogoproto.moretags) = "quad:\"schema:createdAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  string message = 3 [(gogoproto.moretags) = "quad:\"schema:message,optional\""];
  Driver driver = 4 [(gogoproto.moretags) = "quad:\"schema:driver,optional\""];
  string branch = 5 [(gogoproto.moretags) = "quad:\"schema:branch,optional\""];

  /// relationships

  repeated Release has_releases = 101 [(gogoproto.moretags) = "quad:\"schema:hasCommit < *,optional\""];
  repeated Build has_builds = 102 [(gogoproto.moretags) = "quad:\"schema:hasCommit < *,optional\""];
  Project has_project = 103 [(gogoproto.moretags) = "quad:\"schema:hasProject,optional\""];
  Entity has_author = 104 [(gogoproto.moretags) = "quad:\"schema:hasAuthor,optional\""];
  MergeRequest has_mergerequest = 105 [(gogoproto.moretags) = "quad:\"schema:hasMergeRequest,optional\""];
}

message MergeRequest {
  /// fields

  string id = 1 [(gogoproto.casttype) = "github.com/cayleygraph/quad.IRI", (gogoproto.moretags) = "quad:\"@id\"", (gogoproto.customname) = "ID"]; // canonical URI
  google.protobuf.Timestamp created_at = 2 [(gogoproto.moretags) = "quad:\"schema:createdAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.moretags) = "quad:\"schema:updatedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  string title = 4 [(gogoproto.moretags) = "quad:\"schema:title,optional\""];
  string message = 5 [(gogoproto.moretags) = "quad:\"schema:message,optional\""];
  Driver driver = 6 [(gogoproto.moretags) = "quad:\"schema:driver,optional\""];
  string branch = 7 [(gogoproto.moretags) = "quad:\"schema:branch,optional\""];
  State state = 8 [(gogoproto.moretags) = "quad:\"schema:state,optional\""];
  // labels
  // bool is_wip

  /// relationships

  repeated Release has_releases = 101 [(gogoproto.moretags) = "quad:\"schema:hasMergeRequest < *,optional\""];
  repeated Build has_builds = 102 [(gogoproto.moretags) = "quad:\"schema:hasMergeRequest < *,optional\""];
  Project has_project = 103 [(gogoproto.moretags) = "quad:\"schema:hasProject,optional\""];
  Entity has_author = 104 [(gogoproto.moretags) = "quad:\"schema:hasAuthor,optional\""];
  Commit has_commit = 105 [(gogoproto.moretags) = "quad:\"schema:hasCommit,optional\""];

  /// enums

  enum State {
    UnknownState = 0;
    Opened = 1;
    Closed = 2;
  }
}

message Project {
  /// fields

  string id = 1 [(gogoproto.casttype) = "github.com/cayleygraph/quad.IRI", (gogoproto.moretags) = "quad:\"@id\"", (gogoproto.customname) = "ID"]; // canonical URI
  google.protobuf.Timestamp created_at = 2 [(gogoproto.moretags) = "quad:\"schema:createdAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.moretags) = "quad:\"schema:updatedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  Driver driver = 5 [(gogoproto.moretags) = "quad:\"schema:driver,optional\""];
  string name = 6 [(gogoproto.moretags) = "quad:\"schema:name,optional\""];
  string description = 7 [(gogoproto.moretags) = "quad:\"schema:description,optional\""];

  /// relationships

  repeated Artifact has_artifacts = 101 [(gogoproto.moretags) = "quad:\"schema:hasProject < *,optional\""];
  repeated Build has_builds = 102 [(gogoproto.moretags) = "quad:\"schema:hasProject < *,optional\""];
  repeated Commit has_commits = 103 [(gogoproto.moretags) = "quad:\"schema:hasProject < *,optional\""];
  repeated Release has_releases = 104 [(gogoproto.moretags) = "quad:\"schema:hasProject < *,optional\""];
  repeated MergeRequest has_mergerequests = 105 [(gogoproto.moretags) = "quad:\"schema:hasProject < *,optional\""];
  Entity hasOwner = 106 [(gogoproto.moretags) = "quad:\"schema:hasOwner\""];
}

message Entity {
  /// fields

  string id = 1 [(gogoproto.casttype) = "github.com/cayleygraph/quad.IRI", (gogoproto.moretags) = "quad:\"@id\"", (gogoproto.customname) = "ID"]; // canonical URI
  google.protobuf.Timestamp created_at = 2 [(gogoproto.moretags) = "quad:\"schema:createdAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.moretags) = "quad:\"schema:updatedAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  string name = 4 [(gogoproto.moretags) = "quad:\"schema:name,optional\""];
  Driver driver = 5 [(gogoproto.moretags) = "quad:\"schema:driver,optional\""];
  string avatar_url = 6 [(gogoproto.moretags) = "quad:\"schema:avatar_url,optional\"", (gogoproto.customname) = "AvatarURL"];
  Kind kind = 7 [(gogoproto.moretags) = "quad:\"schema:kind,optional\""];
  string description = 8 [(gogoproto.moretags) = "quad:\"schema:description,optional\""];

  /// relationships

  repeated Project has_projects = 101 [(gogoproto.moretags) = "quad:\"schema:hasOwner < *,optional\""];
  repeated Commit has_commits = 102 [(gogoproto.moretags) = "quad:\"schema:hasAuthor < *,optional\""];
  repeated MergeRequest has_mergerequests = 103 [(gogoproto.moretags) = "quad:\"schema:hasAuthor < *,optional\""];

  /// enums

  enum Kind {
    UnknownKind = 0;
    User = 1;
    Organization = 2;
    Bot = 3;
  }
}

message Artifact {
  /// fields

  string id = 1 [(gogoproto.casttype) = "github.com/cayleygraph/quad.IRI", (gogoproto.moretags) = "quad:\"@id\"", (gogoproto.customname) = "ID"]; // canonical URI
  google.protobuf.Timestamp created_at = 2 [(gogoproto.moretags) = "quad:\"schema:createdAt,optional\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = true];
  int64 file_size = 3 [(gogoproto.moretags) = "quad:\"schema:file_size,optional\""];
  string local_path = 4 [(gogoproto.moretags) = "quad:\"schema:local_path,optional\""];
  string download_url = 5 [(gogoproto.moretags) = "quad:\"schema:download_url,optional\"", (gogoproto.customname) = "DownloadURL"];
  string mime_type= 6 [(gogoproto.moretags) = "quad:\"schema:mime_type,optional\""];
  string sha1_sum= 7 [(gogoproto.moretags) = "quad:\"schema:sha1_sum,optional\""];
  string sha256_sum= 8 [(gogoproto.moretags) = "quad:\"schema:sha256_sum,optional\""];
  State state = 9 [(gogoproto.moretags) = "quad:\"schema:state,optional\""];
  Kind kind = 10 [(gogoproto.moretags) = "quad:\"schema:kind,optional\""];
  Driver driver = 11 [(gogoproto.moretags) = "quad:\"schema:driver,optional\""];

  /// relationships

  Build has_build = 101 [(gogoproto.moretags) = "quad:\"schema:hasBuild,optional\""];
  Release has_release = 102 [(gogoproto.moretags) = "quad:\"schema:hasRelease,optional\""];

  /// non-stored fields

  string dl_artifact_signed_url = 201 [(gogoproto.moretags) = "quad:\"-\"",(gogoproto.customname) = "DLArtifactSignedURL"];
  string plist_signed_url = 202 [(gogoproto.moretags) = "quad:\"-\"",(gogoproto.customname) = "PListSignedURL"];

  /// enums

  enum State {
    UnknownState = 0;
    Finished = 1;
    New = 2;
    Error = 3;
    Deleted = 4;
  }
  enum Kind {
    UnknownKind = 0;
    IPA = 1;
    APK = 2;
    DMG = 3;
  }
}

//
// Constants & Internal
//

enum Driver {
  UnknownDriver = 0;
  Buildkite = 1;
  CircleCI = 2;
  Bintray = 3;
  GitHub = 4;
  // ...
}

message Batch {
  repeated Build builds = 1;
  repeated Artifact artifacts = 2;
  repeated Project projects = 3;
  repeated Entity entities = 4;
  repeated Release releases = 5;
  repeated Commit commits = 6;
  repeated MergeRequest merge_requests = 7;
}
